Add Jenkins DSL for JDK 9, Maven, regenerate-javadoc, API-Check, Gradle, no-scratchpad and old-xerces Adjust script and refactor to reuse more stuff Add a workaround for properties
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1772263 13f79535-47bb-0310-9956-ffa450edef68